# wgserve

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/vi_server/wgserver/: MainActivity.java  Native.java  Serv.java
app/src/main/res/drawable/: wgserver.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml
wgserv/: Cargo.toml
wgserv/src/: lib.rs
